--- a/app/src/main/res/layout/photo_list_activity.xml
+++ b/app/src/main/res/layout/photo_list_activity.xml
@@ -30,7 +30,7 @@
                     android:includeFontPadding="false"
                     android:textColor="#ED6868"
                     android:textSize="20dp"
-                    android:text="Let's Eat"/>
+                    android:text="사진"/>
             </com.google.android.material.appbar.MaterialToolbar>
         </com.google.android.material.appbar.AppBarLayout>
         <androidx.core.widget.NestedScrollView
@@ -41,83 +41,22 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
-                <HorizontalScrollView
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scrollbars="none">
-                    <com.google.android.material.chip.ChipGroup
+                    android:layout_height="match_parent">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/photoRecyclerView"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <com.google.android.material.chip.Chip
-                            android:id="@+id/koreanfoodChip"
-                            style="@style/Widget.MaterialComponents.Chip.Entry"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="#한식"/>
-                        <com.google.android.material.chip.Chip
-                            android:id="@+id/chinesefoodChip"
-                            style="@style/Widget.MaterialComponents.Chip.Entry"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="#중식"/>
-                        <com.google.android.material.chip.Chip
-                            android:id="@+id/japanesefoodChip"
-                            style="@style/Widget.MaterialComponents.Chip.Entry"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="#일식"/>
-                        <com.google.android.material.chip.Chip
-                            android:id="@+id/westernfoodChip"
-                            style="@style/Widget.MaterialComponents.Chip.Entry"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="#양식"/>
-                        <com.google.android.material.chip.Chip
-                            android:id="@+id/onemanfoodChip"
-                            style="@style/Widget.MaterialComponents.Chip.Entry"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="#혼밥"/>
-                        <com.google.android.material.chip.Chip
-                            android:id="@+id/alcholfoodChip"
-                            style="@style/Widget.MaterialComponents.Chip.Entry"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="#술집"/>
-                        <com.google.android.material.chip.Chip
-                            android:id="@+id/cafefoodChip"
-                            style="@style/Widget.MaterialComponents.Chip.Entry"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="#카페"/>
-                        <com.google.android.material.chip.Chip
-                            android:id="@+id/atmospherefeelsogoodfoodChip"
-                            style="@style/Widget.MaterialComponents.Chip.Entry"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="#분위기좋은곳"/>
-                    </com.google.android.material.chip.ChipGroup>
-                </HorizontalScrollView>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"/>
                     <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/photoRecyclerView"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"/>
-                        <FrameLayout
-                            android:id="@+id/photoFragment"
-                            android:layout_width="350dp"
-                            android:layout_height="451dp"
-                            android:layout_gravity="center_horizontal"/>
-                    </FrameLayout>
-                </LinearLayout>
+                        android:id="@+id/photoFragment"
+                        android:layout_width="350dp"
+                        android:layout_height="451dp"
+                        android:layout_gravity="center_horizontal"/>
+                </FrameLayout>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
