--- a/app/src/main/res/layout/order_review.xml
+++ b/app/src/main/res/layout/order_review.xml
@@ -156,7 +156,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="20dp"
                 android:text="별점"
                 android:textColor="#000000"
                 android:textSize="20sp" />
@@ -166,10 +166,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
+                android:layout_marginTop="10dp"
                 android:numStars="5"
                 android:stepSize="1"
                 tools:ignore="SpeakableTextPresentCheck" />
+
         </LinearLayout>
+
+        <View
+            android:id="@+id/view6"
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:layout_marginTop="5dp"
+            android:background="#E8E6E6" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -181,6 +190,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="90dp"
+                android:layout_marginTop="15dp"
                 android:backgroundTint="#FF6F68"
                 android:text="저장" />
 
@@ -189,6 +199,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="60dp"
+                android:layout_marginTop="15dp"
                 android:backgroundTint="#FF6F68"
                 android:text="취소" />
         </LinearLayout>
