--- a/app/src/main/res/layout/activity_qr_rest.xml
+++ b/app/src/main/res/layout/activity_qr_rest.xml
@@ -112,15 +112,17 @@
                             android:textSize="16sp"
                             android:fontFamily="@font/notosansregular"
                             android:includeFontPadding="false"/>
+
                         <EditText
+                            android:id="@+id/requestTextView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/notosansregular"
+                            android:includeFontPadding="false"
                             android:paddingTop="10dp"
                             android:paddingBottom="10dp"
                             android:textColor="#000000"
-                            android:textSize="16sp"
-                            android:fontFamily="@font/notosansregular"
-                            android:includeFontPadding="false"/>
+                            android:textSize="16sp" />
                     </LinearLayout>
 
                     <androidx.appcompat.widget.AppCompatButton
