--- a/app/src/main/res/drawable/circle_gradient.xml
+++ b/app/src/main/res/drawable/circle_gradient.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp" >
     <corners android:radius="1000dp" />
-    <solid android:color="#7E7E7E" />
+    <solid android:color="#000000" />
 
 </shape>
