--- a/app/src/main/res/layout/mytab_main.xml
+++ b/app/src/main/res/layout/mytab_main.xml
@@ -102,6 +102,14 @@
                             tools:ignore="TextContrastCheck" />
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/kakao_logout_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:background="#C5EF93"
+                    android:text="카카오 로그아웃"
+                    android:textColor="#000000"
+                    android:textSize="20sp" />
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
