--- a/app/src/main/res/layout/order_review.xml
+++ b/app/src/main/res/layout/order_review.xml
@@ -8,7 +8,22 @@
     android:orientation="vertical"
     tools:context=".Review.ReviewActivity">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">>
 
@@ -205,5 +220,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
