--- a/app/src/main/res/layout/mytab_information_fix.xml
+++ b/app/src/main/res/layout/mytab_information_fix.xml
@@ -84,21 +84,34 @@
                                     android:src="@drawable/right"/>
                             </LinearLayout>
                         </LinearLayout>
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="5dp"
+                    android:layout_margin="8dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="16dp">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
-                            android:layout_marginTop="15dp"
                             android:orientation="horizontal">
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
-
                                 <TextView
                                     android:id="@+id/textView20"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/notosansbold"
+                                    android:includeFontPadding="false"
                                     android:text="비밀번호"
                                     android:textColor="#000000"
                                     android:textSize="20sp" />
@@ -108,8 +121,10 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="***********"
+                                    android:fontFamily="@font/notosansregular"
+                                    android:includeFontPadding="false"
                                     android:textColor="#000000"
-                                    android:textSize="20sp" />
+                                    android:textSize="15sp" />
                             </LinearLayout>
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -159,6 +174,8 @@
                                     android:id="@+id/textView18"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/notosansbold"
+                                    android:includeFontPadding="false"
                                     android:text="이메일"
                                     android:textColor="#000000"
                                     android:textSize="20sp" />
@@ -167,9 +184,11 @@
                                     android:id="@+id/textView19"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/notosansregular"
+                                    android:includeFontPadding="false"
                                     android:text="qwer1234@naver.com"
                                     android:textColor="#000000"
-                                    android:textSize="20sp" />
+                                    android:textSize="15sp" />
                             </LinearLayout>
                         </LinearLayout>
                         <LinearLayout
@@ -178,7 +197,6 @@
                             android:layout_marginLeft="10dp"
                             android:layout_marginTop="15dp"
                             android:orientation="horizontal">
-
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -188,6 +206,8 @@
                                     android:id="@+id/textView22"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/notosansbold"
+                                    android:includeFontPadding="false"
                                     android:text="휴대폰번호"
                                     android:textColor="#000000"
                                     android:textSize="20sp" />
@@ -197,8 +217,10 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="010-6238-1812"
+                                    android:fontFamily="@font/notosansregular"
+                                    android:includeFontPadding="false"
                                     android:textColor="#000000"
-                                    android:textSize="20sp" />
+                                    android:textSize="15sp" />
                             </LinearLayout>
                         </LinearLayout>
                         <LinearLayout
@@ -217,6 +239,8 @@
                                     android:id="@+id/textView24"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/notosansbold"
+                                    android:includeFontPadding="false"
                                     android:text="성별"
                                     android:textColor="#000000"
                                     android:textSize="20sp" />
@@ -226,8 +250,10 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="남"
+                                    android:fontFamily="@font/notosansregular"
+                                    android:includeFontPadding="false"
                                     android:textColor="#000000"
-                                    android:textSize="20sp" />
+                                    android:textSize="15dp" />
                             </LinearLayout>
                         </LinearLayout>
                         <LinearLayout
@@ -246,6 +272,8 @@
                                     android:id="@+id/textView26"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/notosansbold"
+                                    android:includeFontPadding="false"
                                     android:text="생년월일"
                                     android:textColor="#000000"
                                     android:textSize="20sp" />
@@ -255,8 +283,10 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="1998.03.16"
+                                    android:fontFamily="@font/notosansregular"
+                                    android:includeFontPadding="false"
                                     android:textColor="#000000"
-                                    android:textSize="20sp" />
+                                    android:textSize="15sp" />
                             </LinearLayout>
                         </LinearLayout>
                     </LinearLayout>
