--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,20 +100,11 @@
                 android:fontFamily="@font/notosansbold"
                 android:textSize="30dp"
                 android:textColor="#000000"/>
-            <androidx.core.widget.NestedScrollView
-                android:layout_width="wrap_content"
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:overScrollMode="never"
-                android:scrollbars="none">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:scrollbars="horizontal"/>
-                </LinearLayout>
-            </androidx.core.widget.NestedScrollView>
+                android:scrollbars="horizontal"
+                android:id="@+id/mainphotoRecycler"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="match_parent"
@@ -196,7 +187,6 @@
                     app:layout_constraintHorizontal_chainStyle="packed"
                     app:layout_constraintStart_toEndOf="@+id/btnOrder"
                     app:layout_constraintTop_toTopOf="@+id/btnRest" />
-
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.bottomappbar.BottomAppBar>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
