--- a/app/src/main/res/layout/order_recycle.xml
+++ b/app/src/main/res/layout/order_recycle.xml
@@ -44,12 +44,15 @@
                     android:layout_gravity="center"
                     android:src="@drawable/menuimg1" />
             </LinearLayout>
+
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="vertical"
-                android:layout_margin="20dp">
+                android:layout_margin="20dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/tv_item_order_name"
                     android:layout_width="wrap_content"
@@ -57,34 +60,41 @@
                     android:layout_marginRight="16dp"
                     android:text="Name"
                     android:textColor="@android:color/white"
-                    android:textSize="18dp" />
+                    android:textSize="16dp" />
+
                 <TextView
                     android:id="@+id/tv_item_order_menuName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Menu Name"
+                    android:textSize="13dp"
                     android:textColor="@android:color/white" />
+
                 <TextView
                     android:id="@+id/tv_item_order_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="price"
+                    android:textSize="13dp"
                     android:textColor="@android:color/white" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_weight="3"
                 android:gravity="center|right">
 
-                <Button
+                <ImageButton
                     android:id="@+id/btnReview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/design_default_color_secondary"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/ic_baseline_edit_24"
                     android:text="리뷰하기"
+                    android:fontFamily="@font/notosansbold"
+                    android:includeFontPadding="false"
                     android:textColor="@android:color/white"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     tools:ignore="TextContrastCheck" />
             </LinearLayout>
         </LinearLayout>
